--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "framer-motion": "^11.16.0",
     "next": "^15.1.3",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
